2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c: Patch from Danny Baumann to set the window type hint to
	assist compositing window managers (see bug #522238).

2008-02-13  Jonh Wendell <jwendell@gnome.org>

	* docs/Makefile.am:
	* docs/pt_BR/pt_BR.po: added Brazilian Portuguese translation by Amadeu A. Barbosa Junior.
	* docs/: Added some files to the list of svn ignored files.

2008-01-04  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_MixerApplet.xml: Patch from Ted Gould to remove
	almost-impossible-to-use accelerators from the menu. See bug
	#498258. Fortunately these were never documented.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am (DOC_LINGUAS): Added ko.
	* ko/ko.po: gnome-doc-utils migration & updated Korean translation.
	* ko/*.xml: Removed old XMLs.
	* ko/figures/*.png: Removed old images.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c:
	* dock.c:
	* preferences.c: Use G_DEFINE_TYPE macros. Patch from Jaap
	Haitsma, Bug #459705.

2007-09-26  Kjartan Maraas  <kmaraas@gnome.org>

	* preferences.c: (cb_track_select): Plug leak.

2007-09-20  Bastien Nocera  <hadess@hadess.net>

	* preferences.c: (gnome_volume_applet_preferences_init),
	(gnome_volume_applet_preferences_change): Ellipsise the
	device list, otherwise long (really long) device names
	make it go bananas

2007-07-24  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am (INCLUDES): Remove the *_DISABLE_DEPRECATED
	lines. They are evil in release code. In this case they the build
	with recent GTK 2.11.x. See bug #459720.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_MixerApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456944

	* applet.c: (gnome_volume_applet_init),
	(gnome_volume_applet_refresh), (cb_verb):
	* applet.h: