@@ -1,3 +1,10 @@
+2008-04-25  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c:
+	* preferences.c: Fix the math for volume level calculations. This
+	shouldn't have affected anyone, but it's best to be sure. Patch
+	from Tim-Philipp Muller (Bug #529739).
+
 2008-04-22  Ilkka Tuohela <hile@iki.fi>
 
 	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
